fix(faq): overflow label description

--- a/src/output.css
+++ b/src/output.css
@@ -807,8 +807,8 @@ video {
   height: 100vh;
 }
 
-.min-h-\[38px\] {
-  min-height: 38px;
+.min-h-\[50px\] {
+  min-height: 50px;
 }
 
 .min-h-screen {
